--- a/src/App.css
+++ b/src/App.css
@@ -1,99 +1,127 @@
-.icon{
-  font-size: 52px;
-  border-radius: 50px;
+/* App.css */
+
+.icon {
+  font-size: 35px;
   border: 1px solid black;
-  background: red;
-  padding: 7px;
+  border-radius: 50%;
+  padding: 5px;
 }
 .chatting-box {
-  background: aliceblue;
-  height: 100%;
-  width: 24%;
-  padding: 23px;
-  background-image: url();
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 400px; /* adjust as needed */
+  background: white;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  border-radius: 8px;
+  z-index: 1000;
+  max-height: 80%;
+  overflow-y: auto;
 }
+
+.fullscreen {
+  top: 0;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  border-radius: 0;
+}
+
+.overlay {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
 .chatting-div {
   display: flex;
+  justify-content: end;
+  align-items: center;
+  padding: 11px;
+  border-bottom: 1px solid #ddd;
 }
-.chatting-div p{
-  font-size: 23px;
-  color: black;
-  position: relative;
-  left: 90px;
-  margin: 0px 13px;
-  bottom: 7px;
+.chatting-div p {
+  margin: 0px 21px;
+  margin-bottom: 6px;
 }
-.chatting-div h4 {
-  font-family: sans-serif;
-}
-.chatting-info{
-  margin: 57px 0px;
-}
-.chatting-info h3 {
-  font-size: 18px;
-  font-family: sans-serif;
-  font-weight: 400px;
-}
-.chatting-info h4 {
-  padding: 8px 0px;
-  font-size: 16px;
-  font-weight: 400;
+
+.chatting-info,
+.d-flex,
+.chatting-button {
+  padding: 10px;
 }
 .chatting-detail h3 {
-  border: 1px solid #ebe9e9;
-  border-radius: 15px;
-  font-size: 16px;
-  font-weight: 400;
-  font-family: sans-serif;
-  margin: 7px 9px;
-  padding: 7px 26px;
-  background: #fff9f9;
+    border: 1px solid black;
+    border-radius: 14px;
 }
-.chatting-ser {
-  font-size: 18px;
-  margin-bottom: 3px;
+.chatting-info h3,
+.chatting-info h4,
+.d-flex h3 {
+  margin: 7px;
+  padding: 4px 9px;
+  font-size: 17px;
 }
-.chatting-button form input  {
-  width: 88%;
-  border-radius: 12px;
-  border: 1px solid #2b2121;
-  padding: 4px 16px;
+
+.chatting-button form {
+  display: flex;
 }
+
+.chatting-button input[type="search"] {
+  flex: 1;
+  padding: 10px;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  margin-right: 10px;
+}
+
 .chatting-button button {
-  margin-left: 4px;
-  border: 3px solid;
-  border-radius: 50px;
+  padding: 10px 20px;
+  background: #007bff;
+  color: white;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
-@media screen and (max-width:1039px) {
-  .chatting-box{
-      width: 100%;
-  }
-  .chatting-div p {
-      left: 700px;
-  }
+
+.chatting-button button:hover {
+  background: #0056b3;
 }
-@media screen and (max-width:1020px) {
-  .chatting-box{
-      width: 100%;
-  }
-  .chatting-div p {
-      left: 453px;
-  }
-}
-@media screen and (max-width:730px) {
-  .chatting-box{
-      width: 100%;
-  }
-  .chatting-div p {
-    left: 63px;
-  }
-  .chatting-detail h3  {
-    padding: 5px 10px;
-  }
-  .chatting-button form input {
-    width: 86%;
+
+/* Responsive styles */
+@media (max-width: 600px) {
+  .chatting-box {
+    width: 100%;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border-radius: 0;
   }
 
+  .chatting-button input[type="search"] {
+    padding: 8px;
+  }
 
+  .chatting-button button {
+    padding: 8px 16px;
+  }
+}
 
+@media (max-width: 768px) {
+  .chatting-box {
+    width: 100%;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    border-radius: 0;
+  }
+
+  .chatting-button input[type="search"] {
+    padding: 8px;
+  }
+
+  .chatting-button button {
+    padding: 8px 16px;
+  }
 }
